<resources>
    <string name="app_name">Booklette</string>
    <string name="welcome_text">Read more and stress less with our online old book shopping app. Shop from anywhere you
        are and discover titles that you love. Happy reading!
    </string>
    <string name="loginText">Log in</string>
    <string name="signUpText">Sign up</string>
    <string name="continueAsGuest">Continue as guest</string>
    <string name="welcomeText">Welcome,</string>
    <string name="greetingText">Glad to see you</string>
    <string name="rememberMe">Remember me</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="loginWith">Or log in with</string>
    <string name="signUpGreeting">Don\'t have an account yet?
        <b>Sign up</b>
    </string>
    <string name="createAccount">Create Account,</string>
    <string name="createAccountGreeting">To get started now</string>
    <string name="signUpWith">Or sign up with</string>
    <string name="alreadyHaveAccount">
        <u>Already have an account?
            <b>Log in</b>
        </u>
    </string>
    <string name="forgotPasswordStr">Forgot Password</string>
    <string name="forgotYourPassword">Forgot your password?</string>
    <string name="forgotPassDescription">Enter the email address associated with your account and we’ll send you a OTP
        to reset your password.
    </string>
    <string name="forgotPassSubmit">Send code</string>
    <string name="backToLogin">
        <u>Back to
            <b>Log In</b>
        </u>
    </string>
    <string name="verifyEmail">Verify Your Email</string>
    <string name="dontWorry">Don\'t Worry!</string>
    <string name="dontWorryDescription">Please enter the 6 digit code sent to your email</string>
    <string name="resendOTP">Resend code</string>
    <string name="verifyStr">Verify</string>
    <string name="createNewPassword">Create New Password</string>
    <string name="newPassDescription">Please enter your new password and let\'s secure your journey ahead!</string>
    <string name="resetPassSubmit">Reset password</string>
    <string name="signingUpText">signing up...</string>
    <string name="emptyUsernameSignUp">Username can\'t be blank!</string>
    <string name="failed">Failed</string>
    <string name="successfully">Sucessfully</string>
    <string name="emptyEmailSignUp">Email can\'t be blank!</string>
    <string name="emailNotValid">Email is not valid!</string>
    <string name="passwordCheckSignUp">Password length must be greater than 6!</string>
    <string name="confirmPasswordCheck">Confirm Password does not match Password!</string>
    <string name="emptyPasswordSignIn">Password can\'t be blank</string>
    <string name="signUpSuccessDescription">Now you can sign in!</string>
    <string name="signUpFailedDescription">There was something wrong!</string>
    <string name="signInSuccessDescription">You have logged in!</string>
    <string name="signingInText">signing in...</string>
    <string name="forgotPasswordSuccess">Email sent!</string>
    <string name="sendingText">sending...</string>
    <string name="facebook_app_id" translatable="false">3919866068240723</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb3919866068240723</string>
    <string name="facebook_client_token" translatable="false">7645327ab016da730fe1839af7f02eaa</string>
    <string name="navigation_home">Home</string>
    <string name="web_client_id" translatable="false">
        586101897114-tv8rui2j9u4v9sr16sd8ef3duroee2s1.apps.googleusercontent.com
    </string>
    <string name="web_client_secret" translatable="false">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</string>
    <string name="navigation_category">CATEGORY</string>
    <string name="navigation_cart">Cart</string>
    <string name="navigation_favorite">Favorite</string>
    <string name="navigation_account">Account</string>
    <string name="fragment_home_welcome_back">Welcome back</string>
    <string name="fragment_home_what_do_you_wanna_read">What do you want to read today?</string>
    <string name="fragment_home_search">Search...</string>
    <string name="fragment_home_search_hint">name your book here...</string>
    <string name="fragment_home_best_deal">Best deal</string>
    <string name="fragment_home_top_book">Top books</string>
    <string name="home_fragment_today_recommendation">Today\'s recommandations</string>
    <string name="cart_fragment_voucher_hint">Enter Booklette voucher</string>
    <string name="cart_fragment_total_amount">Merchandise Subtotal</string>
    <string name="cart_fragment_checkout">Checkout</string>
    <string name="cart_fragment_discount_amount">Voucher Discount</string>
    <string name="cart_fragment_total_payment">Total Payment</string>
    <string name="navigation_check_out">Checkout</string>
    <string name="shipping_method_check_out">Shipping method</string>
    <string name="check_out_place_order_button">Place order</string>
    <string name="myshop_search">Search</string>
    <string name="myshop_search_hint">name your book here...</string>
    <string name="myshop_manage_shop">Manage shop ></string>
    <string name="myshop_followers">Followers</string>
    <string name="myshop_following">Following</string>
    <string name="myshop_shop_tab">Shop</string>
    <string name="myshop_books_tab">Books</string>
    <string name="myshop_categories_tab">Categories</string>
    <string name="myshop_discount_flavor_text">Sale off up to</string>
    <string name="myshop_discount_minimum">Minimum order</string>
    <string name="myshop_discount_expire_flavor_text">Expiring soon:</string>
    <string name="myshop_discount_expire_day">day(s) left</string>
    <string name="myshop_discount_save">Save</string>
    <string name="myshop_new_arrivals">New Arrivals</string>
    <string name="myshop_best_sellers">Best Sellers</string>
    <string name="myshop_highly_recommended">Highly Recommended</string>
    <string name="myshop_more">More ></string>
    <string name="manageshop_order">Order</string>
    <string name="manageshop_order_history">Order History ></string>
    <string name="manageshop_order_delivery">Delivery</string>
    <string name="manageshop_order_processing">Processing</string>
    <string name="manageshop_order_cancelled">Cancelled</string>
    <string name="manageshop_order_return">Return</string>
    <string name="manageshop_mybooks">My Books</string>
    <string name="manageshop_mybooks_books">Books</string>
    <string name="manageshop_mybooks_outofstock">Out of stock</string>
    <string name="manageshop_mybooks_pending">Pending</string>
    <string name="manageshop_mybooks_violation">Violation</string>
    <string name="manageshop_mybooks_boost">Boost</string>
    <string name="manageshop_mybooks_boosted">Boosted</string>
    <string name="manageshop_mybooks_boost_error">Error!</string>
    <string name="manageshop_mybooks_boost_error2">You pushed this product, come back after</string>
    <string name="manageshop_mybooks_boost_error3">hours</string>
    <string name="manageshop_mybooks_boost_error4">Back to shop</string>
    <string name="manageshop_mybooks_edit">Edit</string>
    <string name="manageshop_mybooks_edit_flavor_text">Edit book</string>
    <string name="manageshop_mybooks_edit_confirm">Save change</string>
    <string name="manageshop_mybooks_delete">Delete</string>
    <string name="manageshop_mybooks_delete_confirm">Are you sure to delete this item?</string>
    <string name="manageshop_mybooks_delete_yes">Yes</string>
    <string name="manageshop_mybooks_delete_no">No</string>
    <string name="manageshop_mybooks_add">Add new book</string>
    <string name="manageshop_mybooks_add_name">Book name</string>
    <string name="manageshop_mybooks_add_author">Book Author</string>
    <string name="manageshop_mybooks_add_category">Category</string>
    <string name="manageshop_mybooks_add_desc">Description</string>
    <string name="manageshop_mybooks_add_price">Price</string>
    <string name="manageshop_mybooks_add_quantity">Quantity remaining</string>
    <string name="manageshop_mybooks_add_btn">Add</string>
    <string name="manageshop_mybooks_add_success">Successful!</string>
    <string name="manageshop_mybooks_add_success2">You\'ve added a new book!</string>
    <string name="manageshop_mybooks_add_back">Back to shop</string>
    <string name="manageshop_program">Program</string>
    <string name="manageshop_program_comingsoon">Coming soon</string>
    <string name="manageshop_program_happening">Happening</string>
    <string name="manageshop_program_finished">Finished</string>
    <string name="manageshop_program_discountprogram_btn">My discount program</string>
    <string name="manageshop_program_discountprogram_none">There are no discount programs</string>
    <string name="manageshop_program_discountprogram_item1">Sale off up to </string>
    <string name="manageshop_program_discountprogram_item2"> for item</string>
    <string name="manageshop_program_discountprogram_item3">View program</string>
    <string name="manageshop_program_discountprogram_item4">View book</string>
    <string name="manageshop_program_discountprogram_add">Add 1 new discount program</string>
    <string name="manageshop_program_discountprogram_add_flavor">Add New Program</string>
    <string name="manageshop_program_discountprogram_add_chooseproduct">Choose Product</string>
    <string name="manageshop_program_discountprogram_add_name">Program name</string>
    <string name="manageshop_program_discountprogram_add_name2">(not visible to buyers)</string>
    <string name="manageshop_program_discountprogram_add_time">Set up time</string>
    <string name="manageshop_program_discountprogram_add_starttime">Start time</string>
    <string name="manageshop_program_discountprogram_add_endtime">End time</string>
    <string name="manageshop_program_discountprogram_add_info">Set up discounts</string>
    <string name="manageshop_program_discountprogram_add_percent">% Discount</string>
    <string name="manageshop_program_discountprogram_add_limit">Order limit</string>
    <string name="manageshop_program_discountprogram_add_introduction">Introduction</string>
    <string name="manageshop_program_discountprogram_add_success">Successful!</string>
    <string name="profilesetting_title">Profile Setting</string>
    <string name="profilesetting_personalinfo">Personal Information</string>
    <string name="profilesetting_editprofile">Edit Profile</string>
    <string name="profilesetting_fullname">Full name</string>
    <string name="profilesetting_dob">Date of Birth</string>
    <string name="profilesetting_phone">Phone</string>
    <string name="profilesetting_email">Email</string>
    <string name="profilesetting_address">Address</string>
    <string name="profilesetting_password">Password</string>
    <string name="profilesetting_password_change">Change</string>
    <string name="profilesetting_notif">Notifications</string>
    <string name="profilesetting_notif_sales">Sales</string>
    <string name="profilesetting_notif_newarrivals">New arrivals</string>
    <string name="profilesetting_notif_delivery">Delivery status changes</string>
    <string name="my_order_delivered_button">Delivered</string>
    <string name="my_shop_order_label">My Sales</string>
    <string name="my_shop_order_to_ship_button">To ship</string>
    <string name="my_shop_order_completed_button">Completed</string>
    <string name="my_shop_order_cancel_button">Cancelled</string>
    <string name="my_shop_order_return_button">Return</string>
    <string name="my_order_search_bar_hint_focused">Order ID</string>
    <string name="default_book_name_fragment_product_list_item" translatable="false">Tuesday Mooney Talks to Ghosts</string>
    <string name="default_owner_fragment_product_list_item" translatable="false">Kate Racculia</string>
    <string name="default_money_fragment_product_list_item" translatable="false">150.000 VND</string>
</resources>