<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" android:background="#F9F9F9"
>
    <ImageView
            android:src="@drawable/back_black"
            android:layout_width="31dp"
            android:layout_height="29dp" android:id="@+id/backBtn"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="35dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/profilesetting_title"
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" android:id="@+id/textView24"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:textStyle="bold"
            android:layout_marginStart="5dp" app:layout_constraintStart_toEndOf="@+id/backBtn"
            android:layout_marginEnd="50dp" app:layout_constraintEnd_toEndOf="parent"/>
    <ScrollView android:layout_width="0dp" android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backBtn" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent">
            <TextView
                    android:text="@string/profilesetting_personalinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView45"
                    android:textStyle="bold" android:textColor="#0B0B0B"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            />
            <TextView
                    android:text="@string/profilesetting_editprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/editProfileBtn"
                    android:textStyle="bold" android:textColor="#9B9B9B"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            />
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:hint="@string/profilesetting_fullname"
                    android:textColorHint="#9B9B9B"
                    android:ems="10"
                    android:elevation="10dp"
                    android:id="@+id/fullNameET"
                    android:background="@color/white"
                    android:paddingStart="20dp"
                    android:gravity="center_vertical" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="16dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView45"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:focusable="false"
                    android:hint="@string/profilesetting_dob"
                    android:textColorHint="#9B9B9B"
                    android:ems="10"
                    android:elevation="10dp"
                    android:id="@+id/dobET"
                    android:background="@color/white"
                    android:paddingStart="20dp"
                    android:gravity="center_vertical" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="16dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/fullNameET"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:inputType="phone"
                    android:hint="@string/profilesetting_phone"
                    android:textColorHint="#9B9B9B"
                    android:ems="10"
                    android:elevation="10dp"
                    android:id="@+id/phoneET"
                    android:background="@color/white"
                    android:paddingStart="20dp"
                    android:gravity="center_vertical" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="16dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/dobET"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/profilesetting_email"
                    android:textColorHint="#9B9B9B"
                    android:ems="10"
                    android:elevation="10dp"
                    android:id="@+id/emailET"
                    android:background="@color/white"
                    android:paddingStart="20dp"
                    android:gravity="center_vertical" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="16dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/phoneET"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:hint="@string/profilesetting_address"
                    android:textColorHint="#9B9B9B"
                    android:ems="10"
                    android:elevation="10dp"
                    android:id="@+id/addressET"
                    android:background="@color/white"
                    android:paddingStart="20dp"
                    android:gravity="center_vertical" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="16dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/emailET"/>

            <TextView
                    android:text="@string/profilesetting_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView47"
                    android:textStyle="bold" android:textColor="#0B0B0B"
                    app:layout_constraintTop_toBottomOf="@+id/addressET" android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            />
            <TextView
                    android:text="@string/profilesetting_password_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/changePasswordBtn"
                    android:textStyle="bold" android:textColor="#9B9B9B"
                    app:layout_constraintTop_toBottomOf="@+id/addressET" android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            />
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:hint="@string/profilesetting_password"
                    android:textColorHint="#9B9B9B"
                    android:ems="10"
                    android:elevation="10dp"
                    android:id="@+id/passwordET"
                    android:background="@color/white"
                    android:paddingStart="20dp"
                    android:gravity="center_vertical" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="16dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView47"/>

            <TextView
                    android:text="@string/profilesetting_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView49"
                    android:textStyle="bold" android:textColor="#0B0B0B"
                    app:layout_constraintTop_toBottomOf="@+id/passwordET" android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            />
            <TextView
                    android:text="@string/profilesetting_notif_sales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView50"
                    android:textColor="#0B0B0B"
                    app:layout_constraintTop_toBottomOf="@+id/textView49" android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            />
            <androidx.appcompat.widget.SwitchCompat
                    android:gravity="center"
                    android:theme="@style/Theme.AppCompat.DayNight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/profilesetting_notif_sales_switch"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="@+id/textView50"
                    app:layout_constraintBottom_toBottomOf="@+id/textView50"/>
            <TextView
                    android:text="@string/profilesetting_notif_newarrivals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView51"
                    android:textColor="#0B0B0B"
                    app:layout_constraintTop_toBottomOf="@+id/textView50" android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            />
            <androidx.appcompat.widget.SwitchCompat
                    android:gravity="center"
                    android:theme="@style/Theme.AppCompat.DayNight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/profilesetting_notif_newarrivals_switch"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="@+id/textView51"
                    app:layout_constraintBottom_toBottomOf="@+id/textView51"/>
            <TextView
                    android:text="@string/profilesetting_notif_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView52"
                    android:textColor="#0B0B0B"
                    app:layout_constraintTop_toBottomOf="@+id/textView51" android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            />
            <androidx.appcompat.widget.SwitchCompat
                    android:gravity="center"
                    android:theme="@style/Theme.AppCompat.DayNight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/profilesetting_notif_delivery_switch"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="@+id/textView52"
                    app:layout_constraintBottom_toBottomOf="@+id/textView52"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>