<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"

    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/bookCover"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@drawable/image_round_corner_for_hcmus"
            android:scaleType="centerCrop"
            android:src="@drawable/image_book_2"></ImageView>


        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:lines="2"
            android:text="@string/default_book_name_fragment_product_list_item"
            android:textColor="#003F88"
            android:textSize="5pt"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/bookOwner"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/default_owner_fragment_product_list_item"
            android:textColor="#000000"
            android:textSize="3pt">

        </TextView>

        <TextView
            android:id="@+id/bookPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/default_money_fragment_product_list_item"
            android:textColor="#000000"
            android:textSize="5pt"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>
</androidx.cardview.widget.CardView>
